# useful

./: .cruft.json  LICENSE  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: black.yaml  docs.yaml  mypy.yaml
scripts/: benchmark_gp.py
src/useful/: gp.py
tests/: test_gp.py
